--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,22 @@
 .App {
   text-align: center;
+  
+  
+}
+input{
+  margin-left: 12px;
+  border-radius: 8px;
+
+}
+
+.back{
+  background-color: #282c34;
+  color: rgb(222, 45, 45);
+  
+  height: 100%;
+  height:100vh
+
+ 
 }
 
 .App-logo {
@@ -27,6 +44,22 @@
 .App-link {
   color: #61dafb;
 }
+
+.app-container {
+  display: flex;
+}
+
+.sidebar {
+  width: 250px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+}
+
 
 @keyframes App-logo-spin {
   from {
